Imagenes, carousel y parallax

--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
             class="fa fa-facebook"></i></a>
       </div>
       <div class="social-links float-right d-none d-lg-block d-md-block">
-          <a class="btn btn-default lang_selector trn" href="#" role="button" data-value="en"><img src="img/USA.svg" height="20" alt=""></a>
-          <a class="btn btn-default lang_selector trn" href="#" role="button"  data-value="es"><img src="img/mexico.png" height="20" alt=""></a>
+        <a class="btn btn-default lang_selector trn" href="#" role="button" data-value="en"><img src="img/USA.svg"
+            height="20" alt=""></a>
+        <a class="btn btn-default lang_selector trn" href="#" role="button" data-value="es"><img src="img/mexico.png"
+            height="20" alt=""></a>
       </div>
     </div>
   </section>
@@ -89,11 +91,13 @@
           <li><a href="#contact" class="trn">Contact</a></li>
         </ul>
         <div class="social-links float-center d-md-none d-lg-none">
-            <p>
-              <a class="btn btn-default lang_selector trn" href="#" role="button" data-value="en"><img src="img/USA.svg" height="20" alt=""></a>
-              <a class="btn btn-default lang_selector trn" href="#" role="button"  data-value="es"><img src="img/mexico.png" height="20" alt=""></a>
-            </p>
-          </div>
+          <p>
+            <a class="btn btn-default lang_selector trn" href="#" role="button" data-value="en"><img src="img/USA.svg"
+                height="20" alt=""></a>
+            <a class="btn btn-default lang_selector trn" href="#" role="button" data-value="es"><img
+                src="img/mexico.png" height="20" alt=""></a>
+          </p>
+        </div>
       </nav><!-- #nav-menu-container -->
     </div>
   </header><!-- #header -->
@@ -107,16 +111,17 @@
       <h2 class="trn"><strong>JARKOL TECHNOLOGIES</strong></h2>
 
       <div>
-        <a href="#about" class="btn-get-started scrollto"><small><strong id="tec">TECHNOLOGY & ENGINEERING SERVICES</strong></small></a>
+        <a href="#about" class="btn-get-started scrollto"><small><strong id="tec">TECHNOLOGY & ENGINEERING
+              SERVICES</strong></small></a>
       </div>
     </div>
 
     <div id="intro-carousel" class="owl-carousel">
-      <div class="item" style="background-image: url('img/intro-carousel/1.jpg');"></div>
-      <div class="item" style="background-image: url('img/intro-carousel/2.jpg');"></div>
-      <div class="item" style="background-image: url('img/intro-carousel/3.jpg');"></div>
-      <div class="item" style="background-image: url('img/intro-carousel/4.jpg');"></div>
+      <div class="item" style="background-image: url('img/intro-carousel/13.jpg');"></div>
+      <div class="item" style="background-image: url('img/intro-carousel/8.jpg');"></div>
       <div class="item" style="background-image: url('img/intro-carousel/5.jpg');"></div>
+      <div class="item" style="background-image: url('img/intro-carousel/7.jpg');"></div>
+      <div class="item" style="background-image: url('img/intro-carousel/4.jpg');"></div>
     </div>
 
   </section><!-- #intro -->
@@ -130,7 +135,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 about-img">
-            <img src="img/11062b_d38eb6f132584c9a9b88b3bbd4c7b8ebf000.jpg" alt="">
+            <img src="img/intro-carousel/12.jpg" alt="">
           </div>
 
           <div class="col-lg-6 content">
@@ -139,34 +144,34 @@
             <ul>
               <li><i class="ion-android-checkmark-circle"></i> <strong class="trn">Geothermal</strong>
               </li>
-              <li><i class="ion-android-checkmark-circle"></i> <strong class="trn">Downhole Monitoring Systems</strong></li>
-              <li><i class="ion-android-checkmark-circle"></i> <strong class="trn">Directional Drilling and Logging Tools</strong>
+              <li><i class="ion-android-checkmark-circle"></i> <strong class="trn">Downhole Monitoring Systems</strong>
+              </li>
+              <li><i class="ion-android-checkmark-circle"></i> <strong class="trn">Directional Drilling and Logging
+                  Tools</strong>
               </li>
               <li><i class="ion-android-checkmark-circle"></i> <strong class="trn">Technical Consultancy</strong></li>
-
-
-
             </ul>
 
           </div>
         </div>
-
       </div>
+
     </section><!-- #about -->
-
-
-
 
     <!--==========================
       Call To Action Section
     ============================-->
-    <section id="call-to-action" class="wow fadeInUp">
+    <section class="wow fadeInUp call-to-action">
       <div class="container">
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
             <h2 class="cta-title trn">About Us</h2>
-            <p class="cta-text trn">From tackling personal decisions to reaching important milestones, our job is to guide you on the path of success. As professional Engineering Consultants, we guarantee great results.</p>
-            <p class="cta-text trn">We are a service company for the Energy and Extraction Industry, with direct experience in Oil and Gas, Mining and Geothermal, particularly in drilling operations, geophysical logging with both wireline and while drilling tools and production parameters monitoring, focused on the introduction of new, better and more accesible technologies in the Latin American market.</p>
+            <p class="cta-text trn">From tackling personal decisions to reaching important milestones, our job is to
+              guide you on the path of success. As professional Engineering Consultants, we guarantee great results.</p>
+            <p class="cta-text trn">We are a service company for the Energy and Extraction Industry, with direct
+              experience in Oil and Gas, Mining and Geothermal, particularly in drilling operations, geophysical logging
+              with both wireline and while drilling tools and production parameters monitoring, focused on the
+              introduction of new, better and more accesible technologies in the Latin American market.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle trn" href="#contact">Get in Touch</a>
@@ -186,14 +191,16 @@
             <div class="box wow fadeInRight">
               <div class="icon"><i class="fa fa-cogs"></i></div>
               <h4 class="title"><a href="" class="trn">Mission</a></h4>
-              <p class="description trn">To provide, Import and develop technology for the Oil and Gas, Geothermal and Mining industry in the Mexican Market in order to promote and boost competitiveness.</p>
+              <p class="description trn">To provide, Import and develop technology for the Oil and Gas, Geothermal and
+                Mining industry in the Mexican Market in order to promote and boost competitiveness.</p>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="box wow fadeInLeft">
               <div class="icon"><i class="fa fa-eye"></i></div>
               <h4 class="title"><a href="" class="trn">Vision</a></h4>
-              <p class="description trn" id="vision">​To become one of the leading Mexican companies boosting the development of technology and strategical tools for the Energy Industry in Mexico and Latin America.</p>
+              <p class="description trn" id="vision">​To become one of the leading Mexican companies boosting the
+                development of technology and strategical tools for the Energy Industry in Mexico and Latin America.</p>
             </div>
           </div>
 
@@ -203,6 +210,81 @@
     </section><!-- #services -->
 
     <!--==========================
+      Call To Action Section
+    ============================-->
+    <section class="wow fadeInUp call-to-action parallax"
+      style="background: url('./img/portfolio/7.jpg') center / cover fixed;">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-9 text-center text-lg-left">
+            <h2 class="cta-title trn">Lorem Ipsum</h2>
+            <p class="cta-text trn">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad necessitatibus est eum
+              quas veniam harum nesciunt voluptatibus minima molestiae laborum, a sunt distinctio at neque dignissimos
+              quis dicta molestias dolorem.</p>
+            <p class="cta-text trn">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus culpa incidunt,
+              commodi doloremque omnis, expedita iste facere nam, debitis aliquid cupiditate dolorum aliquam sed vero.
+              Voluptatibus, cumque iusto? Earum, qui!.</p>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- #call-to-action -->
+
+
+    <!--==========================
+      Carousel Section
+    ============================-->
+    <section class="wow fadeInUp carousel">
+      <div class="container">
+        <div class="owl-carousel clients-carousel">
+          <img src="img/portfolio/1.jpg" alt="">
+          <img src="img/portfolio/2.jpg" alt="">
+          <img src="img/portfolio/3.jpg" alt="">
+          <img src="img/portfolio/4.jpg" alt="">
+          <img src="img/portfolio/5.jpg" alt="">
+          <img src="img/portfolio/5.jpg" alt="">
+          <img src="img/portfolio/5.jpg" alt="">
+          <img src="img/portfolio/8.jpg" alt="">
+          <img src="img/portfolio/9.jpg" alt="">
+          <img src="img/portfolio/10.jpg" alt="">
+          <img src="img/portfolio/11.jpg" alt="">
+          <img src="img/portfolio/12.jpg" alt="">
+          <img src="img/portfolio/13.jpg" alt="">
+          <img src="img/portfolio/14.jpg" alt="">
+          <img src="img/portfolio/15.jpg" alt="">
+          <img src="img/portfolio/15.jpg" alt="">
+          <img src="img/portfolio/15.jpg" alt="">
+          <img src="img/portfolio/18.jpg" alt="">
+          <img src="img/portfolio/19.jpg" alt="">
+          <img src="img/portfolio/20.jpg" alt="">
+          <img src="img/portfolio/21.jpg" alt="">
+          <img src="img/portfolio/22.jpg" alt="">
+          <img src="img/portfolio/23.jpg" alt="">
+          <img src="img/portfolio/24.jpg" alt="">
+          <img src="img/portfolio/25.jpg" alt="">
+          <img src="img/portfolio/25.jpg" alt="">
+          <img src="img/portfolio/25.jpg" alt="">
+          <img src="img/portfolio/28.jpg" alt="">
+          <img src="img/portfolio/29.jpg" alt="">
+          <img src="img/portfolio/30.jpg" alt="">
+          <img src="img/portfolio/31.jpg" alt="">
+          <img src="img/portfolio/32.jpg" alt="">
+          <img src="img/portfolio/33.jpg" alt="">
+          <img src="img/portfolio/34.jpg" alt="">
+          <img src="img/portfolio/35.jpg" alt="">
+          <img src="img/portfolio/35.jpg" alt="">
+          <img src="img/portfolio/35.jpg" alt="">
+          <img src="img/portfolio/38.jpg" alt="">
+          <img src="img/portfolio/39.jpg" alt="">
+          <img src="img/portfolio/40.jpg" alt="">
+          <img src="img/portfolio/41.jpg" alt="">
+          <img src="img/portfolio/42.jpg" alt="">
+        </div>
+
+      </div>
+    </section><!-- #clients -->
+
+    <!--==========================
       Clients Section
     ============================-->
     <section id="clients" class="wow fadeInUp">
@@ -210,7 +292,9 @@
         <div class="section-header">
           <h2 class="trn">Clients</h2>
           <h3></h3>
-          <p class="trn">We work with several companies from around the world in the Energy industry on complex matters, focused on Geothermal and Oil and Gas projects. After a few sessions with us, our clients have been able to get back on track and experience the long lasting impacts of our services.</p>
+          <p class="trn">We work with several companies from around the world in the Energy industry on complex matters,
+            focused on Geothermal and Oil and Gas projects. After a few sessions with us, our clients have been able to
+            get back on track and experience the long lasting impacts of our services.</p>
         </div>
 
         <div class="owl-carousel clients-carousel">
@@ -229,14 +313,17 @@
         <div class="section-header">
           <h2 class="trn" id="prod1">Products & Services</h2>
           <h3 class="trn">The Cutting Edge</h3>
-          <p class="trn">We offer a variety of services to all of our clients, customized to fit their specific needs. Are you a large corporation looking for a step-by-step plan of action? Or, are you are a small startup just beginning your business? No matter what your needs are, Jarkol Technologies is here to provide you guidance every step of the way. Take a look below to see what we can do for you.</p>
+          <p class="trn">We offer a variety of services to all of our clients, customized to fit their specific needs.
+            Are you a large corporation looking for a step-by-step plan of action? Or, are you are a small startup just
+            beginning your business? No matter what your needs are, Jarkol Technologies is here to provide you guidance
+            every step of the way. Take a look below to see what we can do for you.</p>
         </div>
       </div>
 
       <div class="container-fluid">
         <div class="row no-gutters">
 
-          <div class="col-lg-3 col-md-4">
+          <div class="col-lg-4 col-md-4">
             <div class="portfolio-item wow fadeInUp">
               <a href="img/portfolio/1.jpg" class="portfolio-popup">
                 <img src="img/portfolio/1.jpg" alt="">
@@ -249,7 +336,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4">
+          <div class="col-lg-4 col-md-4">
             <div class="portfolio-item wow fadeInUp">
               <a href="img/portfolio/2.jpg" class="portfolio-popup">
                 <img src="img/portfolio/2.jpg" alt="">
@@ -262,7 +349,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4">
+          <div class="col-lg-4 col-md-4">
             <div class="portfolio-item wow fadeInUp">
               <a href="img/portfolio/3.jpg" class="portfolio-popup">
                 <img src="img/portfolio/3.jpg" alt="">
@@ -275,7 +362,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4">
+          <div class="col-lg-4 col-md-4">
             <div class="portfolio-item wow fadeInUp">
               <a href="img/portfolio/4.jpg" class="portfolio-popup">
                 <img src="img/portfolio/4.jpg" alt="">
@@ -288,7 +375,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4">
+          <div class="col-lg-4 col-md-4">
             <div class="portfolio-item wow fadeInUp">
               <a href="img/portfolio/5.jpg" class="portfolio-popup">
                 <img src="img/portfolio/5.jpg" alt="">
@@ -301,54 +388,16 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4">
-            <div class="portfolio-item wow fadeInUp">
-              <a href="img/portfolio/6.jpg" class="portfolio-popup">
-                <img src="img/portfolio/6.jpg" alt="">
-                <div class="portfolio-overlay">
-                  <div class="portfolio-info">
-                    <h2 class="wow fadeInUp trn">Portfolio Item 6</h2>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="portfolio-item wow fadeInUp">
-              <a href="img/portfolio/7.jpg" class="portfolio-popup">
-                <img src="img/portfolio/7.jpg" alt="">
-                <div class="portfolio-overlay">
-                  <div class="portfolio-info">
-                    <h2 class="wow fadeInUp trn">Portfolio Item 7</h2>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="portfolio-item wow fadeInUp">
-              <a href="img/portfolio/8.jpg" class="portfolio-popup">
-                <img src="img/portfolio/8.jpg" alt="">
-                <div class="portfolio-overlay">
-                  <div class="portfolio-info">
-                    <h2 class="wow fadeInUp trn">Portfolio Item 8</h2>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
 
         </div>
 
       </div>
     </section><!-- #portfolio -->
     <section id="clients" class="wow fadeInUp">
-        <div class="container pdf">
-            <div>
-                <a href="productos&servicios.pdf" target="_blank" class="pdf-btn trn">Discover</a>
-            </div>
+      <div class="container pdf">
+        <div>
+          <a href="productos&servicios.pdf" target="_blank" class="pdf-btn trn">Discover</a>
+        </div>
       </div>
     </section>
     <!--==========================
@@ -530,7 +579,8 @@
             <div class="container">
               <div class="section-header">
                 <h2 class="trn">Contact Us</h2>
-                <p class="trn">Do you have a particular challenge you are currently dealing with? Contact us today and explore what we can do for you.</p>
+                <p class="trn">Do you have a particular challenge you are currently dealing with? Contact us today and
+                  explore what we can do for you.</p>
               </div>
             </div>
             <div class="form">
@@ -560,7 +610,8 @@
                   <div class="validation"></div>
                 </div>
                 <div class="msg">
-                    <button type="submit" style="-webkit-appearance: caret; border-radius: 3px" class="text-center pdf-btn trn"> Send Message</button>
+                  <button type="submit" style="-webkit-appearance: caret; border-radius: 3px"
+                    class="text-center pdf-btn trn"> Send Message</button>
                 </div>
               </form>
               <br>
@@ -623,7 +674,7 @@
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
   <!-- JavaScript Libraries -->
-  
+
   <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/jquery/jquery-migrate.min.js"></script>
@@ -642,7 +693,7 @@
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
-   
+
 </body>
 
 </html>
