Agregando información en servicios y traducción, fotos recortadas y reubicación de secciones

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
         </ul>
         <div class="social-links float-center d-md-none d-lg-none">
           <p>
-            <a class="btn btn-default lang_selector trn" href="#" role="button" data-value="en"><img src="img/USA.svg"
+            <a class="btn btn-default lang_selector" href="#" role="button" data-value="en"><img src="img/USA.svg"
                 height="20" alt=""></a>
-            <a class="btn btn-default lang_selector trn" href="#" role="button" data-value="es"><img
+            <a class="btn btn-default lang_selector" href="#" role="button" data-value="es"><img
                 src="img/mexico.png" height="20" alt=""></a>
           </p>
         </div>
@@ -111,8 +111,7 @@
       <h2 class="trn"><strong>JARKOL TECHNOLOGIES</strong></h2>
 
       <div>
-        <a href="#about" class="btn-get-started scrollto"><small><strong id="tec">TECHNOLOGY & ENGINEERING
-              SERVICES</strong></small></a>
+        <a href="#about" class="btn-get-started scrollto"><small><strong id="tec">TECHNOLOGY & ENGINEERING SERVICES</strong></small></a>
       </div>
     </div>
 
@@ -135,21 +134,39 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 about-img">
-            <img src="img/intro-carousel/12.jpg" alt="">
+            <img class="center-block" src="img/portfolio/15.jpg" alt="">
           </div>
 
           <div class="col-lg-6 content">
-            <h2 class="trn">Our Products and Services</h2>
-            <h4 class="trn">Experts in horizontal well logging.</h4>
+            <h2 class="trn small text-uppercase font-italic Italica">Our Products and Services</h2>
+            <h4 class="trn ">Experts in horizontal well logging.</h4>
             <ul>
               <li><i class="ion-android-checkmark-circle"></i> <strong class="trn">Geothermal</strong>
+                <ul>
+                  <li class="small text-uppercase font-italic Italica"><d>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</d><strong class="trn">Comprehensive Approach</strong></li>
+                  <li class="trn">PTS Memory and Real time.</li>
+                </ul>
               </li>
               <li><i class="ion-android-checkmark-circle"></i> <strong class="trn">Downhole Monitoring Systems</strong>
+                <ul>
+                  <li class="small text-uppercase font-italic Italica"><d>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</d><strong class="trn">Precision beyond the surface</strong></li>
+                  <li class="trn">Pressure and Temperature sensors.</li>
+                </ul>
               </li>
-              <li><i class="ion-android-checkmark-circle"></i> <strong class="trn">Directional Drilling and Logging
-                  Tools</strong>
+              </ul>
+              <ul>
+              <li><i class="ion-android-checkmark-circle"></i> <strong class="trn">Directional Drilling and Logging Tools</strong>
+                <ul>
+                  <li class="small text-uppercase font-italic Italica"><d>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</d><strong class="trn">The Path to Success</strong></li>
+                  <li class="trn">Directional drilling services and MWD/LWD tools.</li>
+                </ul>
               </li>
-              <li><i class="ion-android-checkmark-circle"></i> <strong class="trn">Technical Consultancy</strong></li>
+              <li><i class="ion-android-checkmark-circle"></i> <strong class="trn">Technical Consultancy</strong>
+                <ul>
+                  <li class="small text-uppercase font-italic Italica"><d>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</d><strong class="trn">Expert Guidance</strong></li>
+                  <li class="trn">Over 15 years of technical experience in both onshore and offshore operations in the Oil and Gas Industry.</li>
+                </ul>
+              </li>
             </ul>
 
           </div>
@@ -157,6 +174,103 @@
       </div>
 
     </section><!-- #about -->
+    <!--==========================
+      Our Portfolio Section
+    ============================-->
+    <section id="portfolio" class="wow fadeInUp">
+      <div class="container">
+        <div class="section-header">
+          <h2 class="trn" id="prod1">Products & Services</h2>
+          <h3 class="trn">The Cutting Edge</h3>
+          <p class="trn">We offer a variety of services to all of our clients, customized to fit their specific needs. Are you a large corporation looking for a step-by-step plan of action? Or, are you are a small startup just beginning your business? No matter what your needs are, Jarkol Technologies is here to provide you guidance every step of the way. Take a look below to see what we can do for you.</p>
+        </div>
+      </div>
+
+      <div class="container-fluid">
+        <div class="row no-gutters">
+
+          <div class="col-lg-4 col-md-4">
+            <div class="portfolio-item wow fadeInUp">
+              <a href="img/portfolio/18.jpg" class="portfolio-popup">
+                <img src="img/portfolio/18.jpg" alt="">
+                <div class="portfolio-overlay">
+                  <div class="portfolio-info">
+                    <h2 class="wow fadeInUp trn">Geothermal</h2>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-4">
+            <div class="portfolio-item wow fadeInUp">
+              <a href="img/portfolio/19.jpg" class="portfolio-popup">
+                <img src="img/portfolio/19.jpg" alt="">
+                <div class="portfolio-overlay">
+                  <div class="portfolio-info">
+                    <h2 class="wow fadeInUp trn">Downhole Monitoring Systems</h2>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-4">
+            <div class="portfolio-item wow fadeInUp">
+              <a href="img/portfolio/26.jpg" class="portfolio-popup">
+                <img src="img/portfolio/26.jpg" alt="">
+                <div class="portfolio-overlay">
+                  <div class="portfolio-info">
+                    <h2 class="wow fadeInUp trn">Directional Drilling and Logging Tools</h2>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-4">
+            <div class="portfolio-item wow fadeInUp">
+              <a href="img/portfolio/41.jpg" class="portfolio-popup">
+                <img src="img/portfolio/41.jpg" alt="">
+                <div class="portfolio-overlay">
+                  <div class="portfolio-info">
+                    <h2 class="wow fadeInUp trn">Technical Consulting</h2>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-4">
+            <div class="portfolio-item wow fadeInUp">
+              <a href="img/portfolio/36.jpg" class="portfolio-popup">
+                <img src="img/portfolio/36.jpg" alt="">
+                <div class="portfolio-overlay">
+                  <div class="portfolio-info">
+                    <h2 class="wow fadeInUp trn">Drilling Engineering</h2>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4">
+            <div class="portfolio-item wow fadeInUp">
+              <a href="img/portfolio/1.jpg" target="_blank" class="portfolio-popup">
+                <img src="img/portfolio/1.jpg" >
+                <div class="portfolio-overlay">
+                  <div class="portfolio-info">
+                    <a href="productos&servicios.pdf" target="_blank"><h2 class="wow fadeInUp trn">Discover</h2></a>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- #portfolio -->
+  
 
     <!--==========================
       Call To Action Section
@@ -166,13 +280,8 @@
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
             <h2 class="cta-title trn">About Us</h2>
-            <p class="cta-text trn">From tackling personal decisions to reaching important milestones, our job is to
-              guide you on the path of success. As professional Engineering Consultants, we guarantee great results.</p>
-            <p class="cta-text trn">We are a service company for the Energy and Extraction Industry, with direct
-              experience in Oil and Gas, Mining and Geothermal, particularly in drilling operations, geophysical logging
-              with both wireline and while drilling tools and production parameters monitoring, focused on the
-              introduction of new, better and more accesible technologies in the Latin American market.</p>
-          </div>
+            <p class="cta-text trn">From tackling personal decisions to reaching important milestones, our job is to guide you on the path of success. As professional Engineering Consultants, we guarantee great results.</p>
+            <p class="cta-text trn">We are a service company for the Energy and Extraction Industry, with direct experience in Oil and Gas, Mining and Geothermal, particularly in drilling operations, geophysical logging with both wireline and while drilling tools and production parameters monitoring, focused on the introduction of new, better and more accesible technologies in the Latin American market.</p>          </div>
           <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle trn" href="#contact">Get in Touch</a>
           </div>
@@ -191,16 +300,14 @@
             <div class="box wow fadeInRight">
               <div class="icon"><i class="fa fa-cogs"></i></div>
               <h4 class="title"><a href="" class="trn">Mission</a></h4>
-              <p class="description trn">To provide, Import and develop technology for the Oil and Gas, Geothermal and
-                Mining industry in the Mexican Market in order to promote and boost competitiveness.</p>
+              <p class="description trn">To provide, Import and develop technology for the Oil and Gas, Geothermal and Mining industry in the Mexican Market in order to promote and boost competitiveness.</p>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="box wow fadeInLeft">
               <div class="icon"><i class="fa fa-eye"></i></div>
               <h4 class="title"><a href="" class="trn">Vision</a></h4>
-              <p class="description trn" id="vision">​To become one of the leading Mexican companies boosting the
-                development of technology and strategical tools for the Energy Industry in Mexico and Latin America.</p>
+              <p class="description trn" id="vision">​To become one of the leading Mexican companies boosting the development of technology and strategical tools for the Energy Industry in Mexico and Latin America.</p>
             </div>
           </div>
 
@@ -292,9 +399,7 @@
         <div class="section-header">
           <h2 class="trn">Clients</h2>
           <h3></h3>
-          <p class="trn">We work with several companies from around the world in the Energy industry on complex matters,
-            focused on Geothermal and Oil and Gas projects. After a few sessions with us, our clients have been able to
-            get back on track and experience the long lasting impacts of our services.</p>
+          <p class="trn">We work with several companies from around the world in the Energy industry on complex matters, focused on Geothermal and Oil and Gas projects. After a few sessions with us, our clients have been able to get back on track and experience the long lasting impacts of our services.</p>
         </div>
 
         <div class="owl-carousel clients-carousel">
@@ -305,101 +410,7 @@
       </div>
     </section><!-- #clients -->
 
-    <!--==========================
-      Our Portfolio Section
-    ============================-->
-    <section id="portfolio" class="wow fadeInUp">
-      <div class="container">
-        <div class="section-header">
-          <h2 class="trn" id="prod1">Products & Services</h2>
-          <h3 class="trn">The Cutting Edge</h3>
-          <p class="trn">We offer a variety of services to all of our clients, customized to fit their specific needs.
-            Are you a large corporation looking for a step-by-step plan of action? Or, are you are a small startup just
-            beginning your business? No matter what your needs are, Jarkol Technologies is here to provide you guidance
-            every step of the way. Take a look below to see what we can do for you.</p>
-        </div>
-      </div>
-
-      <div class="container-fluid">
-        <div class="row no-gutters">
-
-          <div class="col-lg-4 col-md-4">
-            <div class="portfolio-item wow fadeInUp">
-              <a href="img/portfolio/1.jpg" class="portfolio-popup">
-                <img src="img/portfolio/1.jpg" alt="">
-                <div class="portfolio-overlay">
-                  <div class="portfolio-info">
-                    <h2 class="wow fadeInUp trn">Geothermal</h2>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-4">
-            <div class="portfolio-item wow fadeInUp">
-              <a href="img/portfolio/2.jpg" class="portfolio-popup">
-                <img src="img/portfolio/2.jpg" alt="">
-                <div class="portfolio-overlay">
-                  <div class="portfolio-info">
-                    <h2 class="wow fadeInUp trn">Downhole Monitoring Systems</h2>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-4">
-            <div class="portfolio-item wow fadeInUp">
-              <a href="img/portfolio/3.jpg" class="portfolio-popup">
-                <img src="img/portfolio/3.jpg" alt="">
-                <div class="portfolio-overlay">
-                  <div class="portfolio-info">
-                    <h2 class="wow fadeInUp trn">Directional Drilling and Logging Tools</h2>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-4">
-            <div class="portfolio-item wow fadeInUp">
-              <a href="img/portfolio/4.jpg" class="portfolio-popup">
-                <img src="img/portfolio/4.jpg" alt="">
-                <div class="portfolio-overlay">
-                  <div class="portfolio-info">
-                    <h2 class="wow fadeInUp trn">Technical Consulting</h2>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-4">
-            <div class="portfolio-item wow fadeInUp">
-              <a href="img/portfolio/5.jpg" class="portfolio-popup">
-                <img src="img/portfolio/5.jpg" alt="">
-                <div class="portfolio-overlay">
-                  <div class="portfolio-info">
-                    <h2 class="wow fadeInUp trn">Drilling Engineering</h2>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-
-
-        </div>
-
-      </div>
-    </section><!-- #portfolio -->
-    <section id="clients" class="wow fadeInUp">
-      <div class="container pdf">
-        <div>
-          <a href="productos&servicios.pdf" target="_blank" class="pdf-btn trn">Discover</a>
-        </div>
-      </div>
-    </section>
+    
     <!--==========================
       Testimonials Section
     ============================-->
@@ -579,8 +590,7 @@
             <div class="container">
               <div class="section-header">
                 <h2 class="trn">Contact Us</h2>
-                <p class="trn">Do you have a particular challenge you are currently dealing with? Contact us today and
-                  explore what we can do for you.</p>
+                <p class="trn">Do you have a particular challenge you are currently dealing with? Contact us today and explore what we can do for you.</p>
               </div>
             </div>
             <div class="form">
